bigskip padding on btdl titlepage

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -348,7 +348,7 @@
         \ifdefempty{\btdl@tag}{}{\usebeamerfont{tag}\usebeamercolor[fg]{tag}\btdl@tag\leavevmode\\}
         \ifundef{\insertdate}{}{\usebeamerfont{date}\usebeamercolor[fg]{date}\insertdate\leavevmode\\}
         \usebeamerfont{institute}\usebeamercolor[fg]{institute}\insertinstitute\par
-    }%
+    }\bigskip
 }
 
 \def\TitlepageSlideAlign{b}
